manifests/staging/platform/idp/keycloak_gateway.networking.k8s.io_v1_gateway_keycloak-cloudflare-staging.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: keycloak-cloudflare-staging
  namespace: keycloak
spec:
  gatewayClassName: cloudflare
  listeners:
  - name: http
    port: 80
    protocol: HTTP
