manifests/staging/platform/idp/keycloak_gateway.networking.k8s.io_v1_gateway_keycloak.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: keycloak
  namespace: keycloak
spec:
  gatewayClassName: envoy-gateway
  listeners:
  - hostname: auth.staging.seigra.net
    name: keycloak
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - name: keycloak-gateway-tls
      mode: Terminate
